fix option close button position on mobile, closes #31

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -796,6 +796,9 @@ input, textarea
         width: 16px
         z-index: 7
         
+        @media screen and (max-width: $break-small)
+          left: $mobile-padding
+        
     .product_options_list
       margin: 30px 0
       max-height: 200px
